problem with loading page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webdev-cw-instapro",
+  "name": "instapro",
   "version": "1.0.0",
   "description": "MVP аналога популярной соц. сети для обмена фотографиями",
   "main": "index.js",
